--- a/index.html
+++ b/index.html
@@ -5,5 +5,5 @@
 <body>
   <p>Page content...</p>
 </body>
-<script type="text/javascript" src="/js/zombie_haiku.js" />
+<script type="text/javascript" src="js/zombie_haiku.js"></script>
 </html>
